--- a/emagiceyes-foresight-loop.html
+++ b/emagiceyes-foresight-loop.html
@@ -17,7 +17,8 @@
   --muted:#64748b;
   --line:rgba(102,126,234,.12);
 }
-html{scroll-behavior:smooth}
+html{scroll-behavior:smooth;scrollbar-width:none;-ms-overflow-style:none}
+html::-webkit-scrollbar{display:none}
 body{font-family:'Poppins',sans-serif;background:var(--bg);color:var(--text)}
 
 /* Header */
